Fixed headbar font size on smaller windows.

--- a/site/elements/heading/heading.css
+++ b/site/elements/heading/heading.css
@@ -6,7 +6,7 @@
 }
 
 .text {
-    font-size: 2.5vw;
+    font-size: 50vh;
 }
 
 #icon {
